--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "A NativeScript plugin to deal with Android permissions",
   "main": "permissions.js",
+	"typings": "index.d.ts",
   "nativescript": {
 	"platforms": {
 		"android": "1.8.0"
