--- a/demo/package.json
+++ b/demo/package.json
@@ -1,19 +1,23 @@
 {
-  "nativescript": {
-    "id": "org.nativescript.demo",
-    "tns-android": {
-      "version": "2.2.0"
-    }
-  },
-  "dependencies": {
-    "nativescript-permissions": "file:..",
-    "tns-core-modules": "^2.2.0"
-  },
-  "devDependencies": {
-    "babel-traverse": "6.8.0",
-    "babel-types": "6.8.1",
-    "babylon": "6.8.0",
-    "filewalker": "0.1.2",
-    "lazy": "1.0.11"
-  }
+	"description": "NativeScript Application",
+	"license": "SEE LICENSE IN <your-license-filename>",
+	"readme": "NativeScript Application",
+	"repository": "<fill-your-repository-here>",
+	"nativescript": {
+		"id": "org.nativescript.demo",
+		"tns-android": {
+			"version": "4.1.3"
+		}
+	},
+	"dependencies": {
+		"nativescript-permissions": "file:../src",
+		"nativescript-theme-core": "~1.0.4",
+		"tns-core-modules": "~4.1.0"
+	},
+	"devDependencies": {
+		"babel-traverse": "6.4.5",
+		"babel-types": "6.4.5",
+		"babylon": "6.4.5",
+		"lazy": "1.0.11"
+	}
 }
