--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/nathanaela/nativescript-permissions.git"
   },
   "keywords": [
-    "NativeScript", "permissions", "android", "android 6"
+    "NativeScript", "permissions", "android", "android 6", "android 7", "android 8", "android 9"
   ],
   "author": {
     "name": "Nathanael Anderson",
