--- a/demo/package.json
+++ b/demo/package.json
@@ -1,23 +1,24 @@
 {
-	"description": "NativeScript Application",
-	"license": "SEE LICENSE IN <your-license-filename>",
-	"readme": "NativeScript Application",
-	"repository": "<fill-your-repository-here>",
-	"nativescript": {
-		"id": "org.nativescript.demo",
-		"tns-android": {
-			"version": "4.1.3"
-		}
-	},
-	"dependencies": {
-		"nativescript-permissions": "file:../src",
-		"nativescript-theme-core": "~1.0.4",
-		"tns-core-modules": "~4.1.0"
-	},
-	"devDependencies": {
-		"babel-traverse": "6.4.5",
-		"babel-types": "6.4.5",
-		"babylon": "6.4.5",
-		"lazy": "1.0.11"
-	}
+  "nativescript": {
+    "id": "org.nativescript.demo",
+    "tns-android": {
+      "version": "5.3.0-2019-03-19-143503-02"
+    },
+    "tns-ios": {
+      "version": "5.3.1"
+    }
+  },
+  "description": "NativeScript Application",
+  "license": "SEE LICENSE IN <your-license-filename>",
+  "repository": "<fill-your-repository-here>",
+  "dependencies": {
+    "nativescript-permissions": "file:../src",
+    "nativescript-theme-core": "~1.0.4",
+    "tns-core-modules": "^5.4.0-androidx-2019-03-22-160602-06"
+  },
+  "devDependencies": {
+    "nativescript-dev-webpack": "~0.21.0"
+  },
+  "gitHead": "803cec054c44c99eaa59cdc267993e6346f6cb3a",
+  "readme": "NativeScript Application"
 }
