--- a/demo/package.json
+++ b/demo/package.json
@@ -2,22 +2,22 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-android": {
-      "version": "5.3.1"
+      "version": "6.0.0"
     },
     "tns-ios": {
-      "version": "5.3.1"
+      "version": "6.0.1"
     }
   },
   "description": "NativeScript Application",
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
-    "nativescript-permissions": "file:../src",
+    "nativescript-permissions": "../src",
     "nativescript-theme-core": "~1.0.4",
-    "tns-core-modules": "^5.3.1"
+    "tns-core-modules": "6.0.1"
   },
   "devDependencies": {
-    "nativescript-dev-webpack": "~0.21.0"
+    "nativescript-dev-webpack": "1.0.1"
   },
   "gitHead": "803cec054c44c99eaa59cdc267993e6346f6cb3a",
   "readme": "NativeScript Application"
