--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -12,8 +12,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-
 
 # General
 .DS_Store
@@ -26,8 +24,6 @@ tmp/
 typings/
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/
+
+package-lock.json
