--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-permissions",
-  "version": "1.3.9",
+  "version": "1.3.11",
   "description": "A NativeScript plugin to deal with Android permissions",
   "main": "permissions",
 	"typings": "index.d.ts",
@@ -15,6 +15,7 @@
       "core3": "true",
       "core4": "true",
       "core6": "true",
+      "core7": "true",
       "category": "Processing"
     }
   },
