--- a/compatibility-src/package.json
+++ b/compatibility-src/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@master.technology/permissions",
-  "version": "2.0.0",
+  "name": "nativescript-permissions",
+  "version": "1.3.12",
   "description": "A NativeScript plugin to deal with Android & iOS permissions",
   "main": "permissions",
   "typings": "index.d.ts",
   "nativescript": {
-	"platforms": {
-		"android": "2.0.0",
-        "ios": "2.0.0"
-	},
+  "platforms": {
+     "android": "2.0.0",
+     "ios": "2.0.0"
+   },
     "plugin": {
       "nan": "true",
       "pan": "true",
@@ -20,6 +20,9 @@
       "core8": "true",
       "category": "Processing"
     }
+  },
+  "dependencies": {
+    "@master.technology/permissions": "latest"
   },
   "repository": {
     "type": "git",
